Wave 4b: synchronous weekly job (H2) routed through services (M7)
- H2: replace the fire-and-forget .subscribe() in the weekly job with a blocking
  search (the job runs on the scheduler / admin-trigger thread, not a reactive
  pipeline). Errors now propagate to selectWeeklyGatheringSpot()'s try/catch, and
  the admin trigger only returns once the work is actually done. Per-city search
  failures degrade to an empty result via onErrorResume.
- M7: the job no longer touches repositories directly — it goes through
  CityService / GatheringSpotService / UserService. Added GatheringSpotService
  .save()/.markNotificationSent() and UserService.findByCityId() (UserService now
  depends on UserRepository). Also drops a PII email from a job log line.

Tests: new runsSynchronouslyAndRoutesThroughServices() exercises the now-testable
public entrypoint end-to-end (save + markNotificationSent + notify). 38 total.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>